# dsl_cpe_api

./: ChangeLog  Makefile.am  Makefile.in  configure  configure.in
build_win32/: dsl_cpe_control_version.h
doc/: doxyconfig.vrx  dsl_cpe_api.h  footer.html  header.html
src/: Makefile.am  Makefile.in  dsl_cpe_bnd_vrx.c  dsl_cpe_bnd_vrx.h  dsl_cpe_cli.c  dsl_cpe_cli.h  dsl_cpe_cli_access.c  dsl_cpe_cli_access2.c  dsl_cpe_cli_console.c  dsl_cpe_cli_pipe.c  dsl_cpe_cli_vrx.c  dsl_cpe_config.h.in  dsl_cpe_configuration_parser.c  dsl_cpe_configuration_parser.h  dsl_cpe_control.c  dsl_cpe_control.h  dsl_cpe_debug.c  dsl_cpe_debug_vrx.c  dsl_cpe_dti.c  dsl_cpe_dti_vrx.c  dsl_cpe_linux.c  dsl_cpe_linux.h  dsl_cpe_os.h  dsl_cpe_safec_wrapper.h  dsl_cpe_simulator.c  dsl_cpe_status_parser.c  dsl_cpe_status_parser.h
src/bnd/: drv_dsl_cpe_api_bnd.c  drv_dsl_cpe_api_bnd_vrx.c
src/common/: drv_dsl_cpe_api.c  drv_dsl_cpe_autoboot.c  drv_dsl_cpe_debug.c  drv_dsl_cpe_os_linux.c
src/device/: drv_dsl_cpe_device_vrx.c  drv_dsl_cpe_msg_vrx.c
src/g997/: drv_dsl_cpe_api_g997.c
src/include/: drv_dsl_cpe_api.h  drv_dsl_cpe_api_adslmib.h  drv_dsl_cpe_api_adslmib_ioctl.h  drv_dsl_cpe_api_bnd.h  drv_dsl_cpe_api_bnd_vrx.h  drv_dsl_cpe_api_config.h  drv_dsl_cpe_api_error.h  drv_dsl_cpe_api_g997.h  drv_dsl_cpe_api_ioctl.h  drv_dsl_cpe_api_pm.h  drv_dsl_cpe_autoboot.h  drv_dsl_cpe_debug.h  drv_dsl_cpe_device.h  drv_dsl_cpe_device_vrx.h  drv_dsl_cpe_intern.h  drv_dsl_cpe_msg_vrx.h  (+6 more)
tools/pipe/: Makefile.am  Makefile.in  dsl_cpe_safec_wrapper.h  dsl_pipe_client.c  dsl_pipe_client.h
(+17 files in other folders)
